--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Not Found - Edylicious</title>
-    <link rel="stylesheet" href="/css/subtle-improvements.css">
+    <link rel="stylesheet" href="css/subtle-improvements.css">
     <style>
         body {
             font-family: Georgia, serif;
@@ -40,7 +40,7 @@
     <div class="container">
         <h1>Page Not Found</h1>
         <p>Sorry, the page you're looking for doesn't exist.</p>
-        <a href="/">Return to Homepage</a>
+        <a href="index.html">Return to Homepage</a>
     </div>
 </body>
 </html>
