Add test file and fix favicon path to use local asset

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!-- base href removed for static hosting -->
 <meta charset="utf-8" />
 <title>Edylicious</title>
-<meta http-equiv="Accept-CH" content="Sec-CH-UA-Platform-Version, Sec-CH-UA-Model" /><link rel="icon" type="image/x-icon" href="https://images.squarespace-cdn.com/content/v1/60a37187129c50558fc179b2/31e7c67c-7ca9-40d0-a574-b32d1ffdf487/favicon.ico?format=100w"/>
+<meta http-equiv="Accept-CH" content="Sec-CH-UA-Platform-Version, Sec-CH-UA-Model" /><link rel="icon" type="image/x-icon" href="assets/images.squarespace-cdn.com/content/v1/60a37187129c50558fc179b2/31e7c67c-7ca9-40d0-a574-b32d1ffdf487/favicon.ico"/>
 <link rel="canonical" href="https://www.edylicious.com"/>
 <meta property="og:site_name" content="Edylicious"/>
 <meta property="og:title" content="Edylicious"/>
