Major performance optimization: Remove heavy scripts, add mobile-first CSS, lazy loading

--- a/public/test-vercel.html
+++ b/public/test-vercel.html
@@ -3,7 +3,8 @@
 <head>
     <title>Vercel Test</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
+<link rel="stylesheet" href="css/optimized.css">
 </head>
 <body>
     <h1>Vercel is Working!</h1>
