--- a/public/test.html
+++ b/public/test.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <title>Test Page</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
 <link rel="stylesheet" href="css/subtle-improvements.css">
+<link rel="stylesheet" href="css/optimized.css">
 </head>
 <body>
     <h1>Server is working!</h1>
