--- a/public/404.html
+++ b/public/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
     <title>Page Not Found - Edylicious</title>
     <link rel="stylesheet" href="css/subtle-improvements.css">
     <style>
@@ -35,6 +35,7 @@
             color: white;
         }
     </style>
+<link rel="stylesheet" href="css/optimized.css">
 </head>
 <body>
     <div class="container">
