--- a/public/view-site.html
+++ b/public/view-site.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
     <title>Edylicious Clone - Site Navigator</title>
     <style>
         body {
@@ -55,6 +55,7 @@
         }
     </style>
 <link rel="stylesheet" href="css/subtle-improvements.css">
+<link rel="stylesheet" href="css/optimized.css">
 </head>
 <body>
     <div class="container">
