Restore header visibility on all pages

--- a/public/pages/email-templates.html
+++ b/public/pages/email-templates.html
@@ -53,6 +53,7 @@
         }
     </style>
   <link rel="stylesheet" href="../css/full-width.css">
+  <link rel="stylesheet" href="../css/restore-header.css">
 </head>
 <body>
     <h1>Edylicious Tea Room - Email Templates</h1>
