--- a/public/view-site.html
+++ b/public/view-site.html
@@ -57,6 +57,7 @@
 <link rel="stylesheet" href="css/subtle-improvements.css">
 <link rel="stylesheet" href="css/optimized.css">
   <link rel="stylesheet" href="/css/full-width.css">
+  <link rel="stylesheet" href="/css/restore-header.css">
 </head>
 <body>
     <div class="container">
