--- a/public/pages/booking.html
+++ b/public/pages/booking.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/subtle-improvements.css">
     <link rel="stylesheet" href="../css/optimized.css">
   <link rel="stylesheet" href="../css/full-width.css">
+  <link rel="stylesheet" href="../css/restore-header.css">
     
     <style>
         /* Booking Page Specific Styles - Using Original Burgundy Theme */
