Force Vercel deployment with vercelignore and meta update

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta name="twitter:image" content="http://static1.squarespace.com/static/60a37187129c50558fc179b2/t/64028bfaee0eef5b7de96a2a/1677888506393/Edylicious-logo.png?format=1500w"/>
   <meta name="twitter:url" content="https://www.edylicious.com"/>
   <meta name="twitter:card" content="summary"/>
-  <meta name="description" content="" />
+  <meta name="description" content="Edylicious - Fine Tea Room and Catering Services in DeSoto, Texas" />
   
   <style>
     * {
