Update Vercel config and force cache invalidation

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <meta name="twitter:url" content="https://www.edylicious.com"/>
   <meta name="twitter:card" content="summary"/>
   <meta name="description" content="Edylicious - Fine Tea Room and Catering Services in DeSoto, Texas" />
+  <!-- Deployment: 2025-07-22-02:50 -->
   
   <style>
     * {
