Revert "Optimize site performance - 99% reduction in JS/CSS size"
This reverts commit 02751bb82bb9a4d03c4fdd6a5088d4e25cf72580.

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -20,7 +20,8 @@
 <meta name="twitter:card" content="summary"/>
 <meta name="description" content="" />
 <link rel="preconnect" href="https://images.squarespace-cdn.com">
-<!-- Squarespace context removed for static hosting --><script type="application/ld+json">{"url":"https://www.edylicious.com","name":"Edylicious","description":"","image":"//images.squarespace-cdn.com/content/v1/60a37187129c50558fc179b2/1677361146437-U8JITX4YDYN8C3FJUJEL/Edylicious-logo.png","@context":"http://schema.org","@type":"WebSite"}</script><link rel="stylesheet" type="text/css" href="../assets/static1.squarespace.com/static/versioned-site-css/60a37187129c50558fc179b2/34/5c5a519771c10ba3470d8101/60a37187129c50558fc179cc/1653/site.css"/><!-- End of Squarespace Headers -->
+<!-- Squarespace context removed for static hosting --><script type="application/ld+json">{"url":"https://www.edylicious.com","name":"Edylicious","description":"","image":"//images.squarespace-cdn.com/content/v1/60a37187129c50558fc179b2/1677361146437-U8JITX4YDYN8C3FJUJEL/Edylicious-logo.png","@context":"http://schema.org","@type":"WebSite"}</script><link rel="stylesheet" type="text/css" href="../assets/static1.squarespace.com/static/versioned-site-css/60a37187129c50558fc179b2/34/5c5a519771c10ba3470d8101/60a37187129c50558fc179cc/1653/site.css"/><script>Static.COOKIE_BANNER_CAPABLE = true;</script>
+<!-- End of Squarespace Headers -->
     <link rel="stylesheet" type="text/css" href="../assets/static1.squarespace.com/static/vta/5c5a519771c10ba3470d8101/versioned-assets/1752169869998-QC793B4OV8HL9A1L52BT/static.css">
   <link rel="stylesheet" href="../css/subtle-improvements.css">
 </head>
